--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,7 @@
+@import "variables";
+@import "libs/normalize";
 
-@import 'variables';
-@import 'libs/normalize';
-
-@import 'components/all';
+@import "components/all";
 
 body {
   background-color: $background;
@@ -15,6 +14,7 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+  padding: 40px 0;
 }
 
 .content {
