--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,15 +25,36 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+
+
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+    margin: auto;
+    @media  (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+      
+    }
+    @media(max-width:1024px) {
+      grid-template-columns: repeat(2, 1fr);
+
+    }
+    @media (max-width: 800px) {
+      
+        grid-template-columns: repeat(1, 1fr); /* 1 столбец */
+      
+    }
+
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  @media (max-width: 1280px) {
+    flex-direction: column;
   }
 }
 
