--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,7 +12,7 @@ body {
   height: 100%;
   background-color: #fff;
   margin: 50px auto;
-  border-radius: 10px;
+
   max-width: 1400px;
   padding: 40px 0;
 }
@@ -27,31 +27,26 @@ body {
   &__items {
     display: grid;
 
-
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 11px;
     margin: auto;
-    @media  (max-width: 1400px) {
+    @media (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
-      
     }
-    @media(max-width:1024px) {
+    @media (max-width: 1024px) {
       grid-template-columns: repeat(2, 1fr);
-
     }
     @media (max-width: 800px) {
-      
-        grid-template-columns: repeat(1, 1fr); /* 1 столбец */
-      
+      grid-template-columns: repeat(1, 1fr); /* 1 столбец */
     }
-
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: nowrap;
   }
   @media (max-width: 1280px) {
     flex-direction: column;
@@ -93,6 +88,11 @@ body {
         stroke: $black;
         stroke-width: 1.9;
       }
+    }
+  }
+  .categories {
+    &__list {
+      display: flex;
     }
   }
 
