--- a/src/components/pagination/style.module.css
+++ b/src/components/pagination/style.module.css
@@ -4,4 +4,34 @@
     max-width: 40%;
     width: 100%;
     margin: 0 auto;
+    li{
+        border: 1px solid orange;
+        cursor: pointer;
+        padding: 20px 25px;
+        border-radius: 60px;
+        &:hover {
+            background: orange;
+            a{
+                color: white;
+            }
+        }
+     
+
+    }
 }
+
+.root ul .selected{
+    
+        border: 1px solid orange !important;
+     
+       background: orange !important;
+            a{
+                color: white !important;
+            }
+        
+     
+
+    
+}
+
+
